Initial commit of personal portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-hi im Vel
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Vel Byers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script src="https://kit.fontawesome.com/0e916ad8e9.js" crossorigin="anonymous"></script>
+</head>
+<body data-spy="scroll" data-target="#navbarResponsive">
+    <div id="Home">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="#Home" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#About">About me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
+        <div class="background">
+            <img src="saira-UMo01PKPU9o-unsplash.jpg" style="width:100%; height: 1000px; object-fit: cover; 
+            filter: grayscale(100%); filter: brightness(0.4)">
+        </div>
+        <div class="heading-content text-center">
+            <h5>Hi, my name is</h5>
+            <h1>Vel Byers</h1>
+            <p>I'M A SOFTWARE DEVELOPER</p>
+        </div>
+    </div>
+    <div id="About" class="offset container mt-3 pb-5">
+        <div class="post-heading text-center">
+            <div class="white-space" style="height: 80px"></div>
+            <h3 class="display-4 fw-bold">About Me</h3>
+            <hr class="w-50 mx-auto pb-5">
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-m-6 col-12">
+                <img src="matthew-deltoro-LdFvvpjnB2A-unsplash.jpg"
+                    style="width:100%; height: 700px; object-fit: cover; filter: grayscale(30%);">
+                <div class="white-space" style="height: 80px"></div>
+            </div>
+            <div class="col-lg-6 col-m-6 col-12">
+                <h2 style="font-size:35px; font-family: monospace;">Getting to know me</h2>
+                <hr>
+                <p style="font-size: 19px; font-family: monospace;">Im a software developer that graduates from PDX Code Guild's 16 week
+                    immersive fullstack web development bootcamp in Oct 2022. My passion for software development stems
+                    from my love of creating things and for analytics. I joined the US Army in 2018 shortly after my
+                    college football career came to an end; so I could again be a apart of a team, I missed the aspect
+                    of collabrating to reach a common goal. To learn more about me and the skills I posses and can use
+                    to contribute as a member of your team, click the button!</p>
+                <button class="btn" style="font-family:monospace"> <a href="vel-resume.pdf" target="_blank">My Resume</a></button>
+            </div>
+        </div>
+    </div>
+    <div id="Projects" class="offset container mt-3 pb-5">
+        <div class="post-heading text-center">
+            <div class="white-space" style="height: 80px"></div>
+            <h3 class="display-4 fw-bold">Projects</h3>
+            <hr class="w-50 mx-auto pb-5">
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-12 pb-5">
+                <div class="card">
+                    <img class="card-img-top" src="august-phlieger-VYTDEYg-oR8-unsplash.jpg" style="height: 300px;"
+                        alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Kanye Api</h5>
+                        <p class="card-text">Using the request library I Showcased Fullstack Application Development
+                            skills through designing an API that replicates a magazine layout and outputs quotes to the
+                            user through a GUI designed with Tkinter.</p>
+                        <a href="#" class="btn btn-dark">Check it out!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 pb-5">
+                <div class="card">
+                    <img class="card-img-top" src="colton-sturgeon-FiCPutl_aog-unsplash.jpg" style="height: 300px;"
+                        alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">TBA</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-dark">Check it out!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 pb-5">
+                <div class="card">
+                    <img class="card-img-top" src="piotr-chrobot-6oUsyeYXgTg-unsplash.jpg" style="height: 300px;"
+                        alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">TBA</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-dark">Check it out!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="Contact" class="offset container w-50 mx-auto mt-3 mb-5">
+        <div class="post-heading text-center">
+            <div class="white-space" style="height: 80px"></div>
+            <h3 class="display-4 fw-bold">Contact Me</h3>
+            <hr class="w-50 mx-auto pb-5">
+        </div>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Full Name:</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your name with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address:</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Your Message:</label>
+                <textarea class="form-control"></textarea>
+                <small id="emailHelp" class="form-text text-muted">We'll never share your message with anyone
+                    else.</small>
+            </div>
+            <button type="submit" class="btn btn-dark" style="font-family: monospace; margin-top: 5px;">Sent</button>
+        </form>
+    </div>
+    <div class="container-fluid" style="padding: 0;">
+        <footer class="text-center text-white" style="background-color: #f1f1f1;">
+            <div class="container pt-3">
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                    data-mdb-ripple-color="dark"><i class="fa-solid fa-envelope"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                    data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                    data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+                </section>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
