footer icons now interactive

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
     <div class="container-fluid" style="padding: 0;">
         <footer class="text-center text-white" style="background-color: #f1f1f1;">
             <div class="container pt-3">
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="mailto:vellbyers@gmail.com?subject=" role="button"
                     data-mdb-ripple-color="dark"><i class="fa-solid fa-envelope"></i></a>
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/vel-byers-1910b224a/" role="button"
                     data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/Velshaun/Velshaun.github.io" role="button"
                     data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
                 </section>
             </div>
